nesc-frontend/src/test/resources/integration/programs/good/good01/C.nc
/* Infinite for loop. */

int f()
{
   int n;

   for(;;)
   {
      ++n;
   }

   return n;
}

configuration C
{
}
implementation
{
}
