nesc-frontend/src/test/resources/integration/programs/bad/bad06/C.nc
/* Declaring the same tag with different kinds. */

union u;
struct u;

configuration C
{
}
implementation
{
}
